# engie

./: .env.example  .gitignore  LICENSE  README.md  setup.sh
.github/workflows/: release.yml
Formula/: familiar.rb
apps/cli/: package.json  test-gateway.mjs
apps/terminal/: Cargo.toml
apps/terminal/src/: app.rs  config.rs  event.rs  gateway.rs  main.rs  protocol.rs  state.rs
apps/terminal/src/input/: mod.rs
apps/terminal/src/theme/: builtin.rs  mod.rs
apps/terminal/src/ui/: chat.rs  input.rs  mod.rs  status_bar.rs
brain/: learner.mjs
cli/: package.json  test-gateway.mjs
config/: HEARTBEAT.md  IDENTITY.md  USER.md  cozyterm.json  openclaw.json.example  projects.json
cozyterm-mobile/: app.json  package.json
cozyterm-web/: index.html  package-lock.json  package.json
cron/: jobs.json  telegram-push.mjs
daemon/: Cargo.toml
daemon/config/: config.toml.default  permissions.toml
daemon/scripts/: familiar-init.sh  familiar-lib.sh  ocr.swift
daemon/src/: config.rs  error.rs  main.rs  permissions.rs
daemon/src/capabilities/: accessibility.rs  app_control.rs  audio.rs  browser.rs  clipboard.rs  defaults.rs  display.rs  file_ops.rs  file_search.rs  input_sim.rs  mod.rs  network.rs  notifications.rs  ocr.rs  screenshots.rs  system_info.rs  terminal.rs  window_mgmt.rs
daemon/src/mcp/: protocol.rs  server.rs  types.rs
daemon/src/platform/linux/: mod.rs
daemon/src/platform/macos/: accessibility.rs  app_control.rs  audio.rs  ax_helpers.rs  browser.rs  cg_helpers.rs  clipboard.rs  defaults.rs  display.rs  file_ops.rs  file_search.rs  input_sim.rs  mod.rs  network.rs  notifications.rs  ocr.rs  screenshots.rs  system_info.rs  terminal.rs  window_mgmt.rs
daemon/src/platform/windows/: mod.rs
docs/: familiar-run-release-plan.md
engie-web/: index.html  package.json
familiar-tray/: Cargo.toml
familiar-tray/config/: com.familiar.tray.plist
familiar-tray/scripts/: install-tray.sh
familiar-tray/src/: animation.rs  gateway.rs  main.rs  physics.rs  popover.rs  state.rs
mcp-bridge/: index.mjs  package-lock.json  package.json
scripts/: activity-server.mjs  benchmark-coding.mjs  claude-code-proxy.mjs  com.cozyterm.activity-sync.plist  com.cozyterm.claude-proxy.plist  com.cozyterm.post-session-summary.plist  com.cozyterm.telegram-bridge.plist  com.cozyterm.telegram-push.plist  com.engie.activity-sync.plist  com.engie.cloudflare-tunnel.plist  com.engie.daemon.plist  com.engie.ollama-proxy.plist  com.engie.telegram-bridge.plist  com.engie.telegram-push.plist  daemon-telegram.mjs  daemon.mjs  gateway.mjs  install-activity-sync-service.sh  install-daemon-service.sh  install-post-session-summary-cron.sh  install-proxy-service.sh  install-services.sh  install-telegram-bridge-service.sh  migrate-to-cozyterm.sh  post-session-summary.mjs  router.mjs  shared-invoke.mjs  start-gateway.sh  start-tui-session.sh  start-tunnel.sh  telegram-bridge.mjs  test-hello.mjs  tool-loop.mjs  tools.mjs
services/: claude-code-proxy.mjs  claude-sessions.mjs  daemon-telegram.mjs  daemon.mjs  gateway.mjs  install-services.sh  install.sh  project-resolver.mjs  response-validator.mjs  router.mjs  session-store.mjs  shared-invoke.mjs  start-gateway.sh  start-tui-session.sh  task-runner.mjs  telegram-bridge.mjs  test-hello.mjs  test-upgrades.mjs  tool-loop.mjs  tools.mjs  watchdog.mjs
shared/: constants.js  trigger-cascade.js  work-queue.js
trainer/: README.md  classify.mjs  collector.mjs  domain-config.mjs  forge-auto.mjs  forge-cli.mjs  forge-db.js  mine-expanded.mjs  mine-ground-truth.mjs  mine-multi-org.mjs  mine-org-data.mjs  mine-top-repos.mjs  self-iterate.mjs  serve.mjs  setup.sh  tool-collector.mjs
(+186 files in other folders)
